--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <link rel="stylesheet" href="../static/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <meta charset="UTF-8">
-    <title>
-      {% block page_title %}
-      {% endblock %}
-    </title>
+  <meta charset="UTF-8">
+  <title>
+    {% block page_title %}
+    {% endblock %}
+  </title>
 </head>
-<body class="d-flex flex-column min-vh-100 pt-4 bg-light">
+<body class="d-flex flex-column min-vh-100 pt-4 bg-dark">
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"> 
       <div class="container-fluid">
@@ -90,10 +91,9 @@
 
 
   <footer class="footer mt-auto py-3 bg-dark text-light text-end">
-    <div class="container">
       {% if current_user.is_authenticated %}
       <!-- User display, visible only on large screens -->
-      <small>
+      <small class="mx-3">
         Είστε συνδεδεμένοι ως χρήστης <em>{{ current_user.username }}</em> (powered by pdgr54). 
         <a href="{{url_for('users.logout')}}">
           Αποσύνδεση
@@ -105,11 +105,10 @@
       </small>
 
       {% else %}
-      <small>
+      <small class="mx-3">
         Είστε αποσυνδεμένοι (powered by pdgr54)
       </small>
       {% endif %}
-    </div>
   </footer>
 
   {% block javascript %}
