--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -13,7 +13,7 @@
             <!-- Section with personal details for patient and partner -->
             <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5 text-bg-dark">
                 <div class="col-12 col-lg-6 text-light">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="; border-color: #EF539E;">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="border-color: #EF539E;">
                         <div class="d-flex flex-column h-100 p-4 text-shadow-1">
                             <h3 class="pb-2">
                                 Personal Details
@@ -31,7 +31,7 @@
 
                 <!-- Section with contact details -->
                 <div class="col-12 col-lg-6 text-light">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="; border-color: #EF539E;">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="border-color: #EF539E;">
                         <div class="d-flex flex-column h-100 p-4 text-shadow-1">
                             <h3 class="pb-2">
                                 Contact Details
