--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -5,9 +5,9 @@ block content %}
 
     <main class="flex-shrink-0 m-auto py-3 flex-grow-1 bg-dark">
         
-        <div class=" container px-4" id="custom-cards">
+        <div class="container px-4 pt-3 " id="custom-cards">
      
-          <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5 text-bg-dark">
+          <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-4 text-bg-dark mt-1">
       
             <div class="col-12 col-lg-8 order-1 order-lg-1 text-light">
               <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-color: #EF539E;">
