--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -3,15 +3,21 @@
 {% block page_title %} Καρτέλα Ασθενή {% endblock %}
 {% block content %}
 
-    {% if current_user.is_authenticated %}
-    <main class="flex-shrink-0 m-auto py-3 flex-grow-1 bg-dark">
-    <div class="container mt-2 text-light">
+{% if current_user.is_authenticated %}
+<main class="flex-shrink-0 m-auto flex-grow-1 bg-dark">
+
+    <div class="pt-2 container px-4 text-light" id="icon-grid">
+        <h2 class="zd py-2 text-center" style="font-weight: 100; color: #EF539E;">Fani Vassileiadou</h2>
+    </div>
+
+
+    <div class="container zd text-light">
 
         <!-- Row with the general history -->
         <div class=" container px-4" id="custom-cards"> 
 
             <!-- Section with personal details for patient and partner -->
-            <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-5 text-bg-dark">
+            <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-3 text-bg-dark">
                 <div class="col-12 col-lg-6 text-light">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="border-color: #EF539E;">
                         <div class="d-flex flex-column h-100 p-4 text-shadow-1">
@@ -47,18 +53,101 @@
             </div>
             <!-- end of row with the general history -->
 
-
-
-
-
         </div>
-        
+        <button class="btn login-btn ms-4">Update</button>
     </div>
-    </main>
-    {% else %}
+
+    <div class="container zd text-light py-5" style="text-align: center;">
+        <ul class="nav nav-pills mb-3 justify-content-center bg-light p-2" style="border-radius: 5rem; display: inline-flex; box-shadow: inset 1px 1px 0.2rem #3e1629;" id="pills-tab" role="tablist">
+            <li class="nav-item"  role="presentation">
+              <button class="nav-link active" style="border-radius: 5rem;" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Ιατρικό Ιστορικό</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" style="border-radius: 5rem;" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Μαιευτικό Ιστορικό</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" style="border-radius: 5rem;" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Κύηση</button>
+            </li>
+            <li class="nav-item" role="presentation">
+              <button class="nav-link" style="border-radius: 5rem;" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false" >Γυναικολογικό Ιστορικό</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" style="border-radius: 5rem;" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Αρχεία</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" style="border-radius: 5rem;" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Εξετάσεις</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" style="border-radius: 5rem;" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Ραντεβού</button>
+            </li>
+        </ul>
+          <div class="tab-content p-3" style="text-align: left;" id="pills-tabContent">
+            <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
+                <ul class="list-unstyled">
+                    <li>
+                        <label for="fullName">Ονοματεπώνυμο</label>
+                        <input type="text" name="fullName" id="fullName" tabindex="10" value="Φανή Βασιλειάδου" disabled="disabled">
+                    </li>
+                    <li>
+                        <label for="fatherName">Πατρώνυμο</label>
+                        <input type="text" name="fatherName" id="fatherName" tabindex="20" value="Σπυρίδωνας" disabled="disabled">
+                    </li>
+                    <li>
+                        <label for="dateOfBirth">Ημερομηνία Γεννήσεως / Ηλικία</label>
+                        <input name="dateOfBirth" id="dateOfBirth" tabindex="30" value="1945-03-04" disabled="disabled">
+                        /
+                        <input name="age" id="age" size="2" value="79" disabled="disabled">
+                    </li>
+                    <li>
+                        <label for="maritalStatus">Οικογενειακή Κατάσταση </label>
+                        <select name="maritalStatus" id="maritalStatus" tabindex="40" disabled="disabled">
+                            <option value=""></option>
+                            <option value="single" selected="">Άγαμος</option>
+                            <option value="married">Έγγαμος</option>
+                        </select>
+                    </li>
+                    <li>
+                        <label for="nationality">Εθνικότητα</label>
+                        <input type="text" name="nationality" id="nationality" tabindex="50" value="Ελληνική" disabled="disabled">
+                    </li>
+                    <li>
+                        <label for="occupation">Επάγγελμα</label>
+                        <input type="text" name="occupation" id="occupation" tabindex="60" value="Συνταξιούχος ΟΤΕ" disabled="disabled">
+                    </li>
+                    <li>
+                        <label for="insurance">Ασφάλιση</label>
+                        <select name="insurance" id="insurance" tabindex="70" disabled="disabled">
+                            <option value=""></option>
+                            <option value="eopy">ΕΟΠΥΥ</option>
+                            <option value="other" selected="">Ιδιωτική Ασφάλεια</option>
+                        </select>
+                        <input type="text" name="insuranceComment" id="insuranceComment" tabindex="75" value="Axxa Ασφαλιστική" disabled="disabled">
+                    </li>
+                    <li>
+                        <label for="amka">ΑΜΚΑ</label>
+                        <input type="text" name="amka" id="amka" tabindex="77" value="13745541" disabled="disabled">
+                        <a href="http://www.amka.gr/AMKAGR/Default.aspx" target="_blank" style="padding:4px; color:rgba(239, 83, 158,1.0); font-size: 12px">Αναζήτηση</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab" tabindex="0">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse, quasi enim mollitia doloribus praesentium dolores aut nostrum atque. Eveniet praesentium mollitia, quasi quia maxime expedita impedit odit sed modi? Quisquam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti et ipsum ratione harum ab, quia atque repellendus voluptate illo a soluta nesciunt ipsa rem necessitatibus nulla, aliquam, maxime natus nihil?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa saepe illo ratione mollitia nobis. Impedit obcaecati itaque qui quam voluptate, iure ipsum nobis reiciendis repellendus cum quibusdam aperiam repellat dolorem!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo esse praesentium id necessitatibus iusto nesciunt sit? Nam, qui illum! Culpa et consequatur libero sequi quae inventore incidunt perferendis vero ducimus?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis accusantium voluptates, facere animi, eveniet consectetur hic veniam, dolores perferendis iusto doloremque? Eos atque veniam necessitatibus vel sapiente laboriosam quod rem.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque fugit vero ducimus saepe unde officiis impedit, optio quisquam ullam doloribus repellat provident sunt incidunt repudiandae dignissimos mollitia placeat perspiciatis?
+                </p>
+            </div>
+            <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab" tabindex="0">...</div>
+            <div class="tab-pane fade" id="pills-disabled" role="tabpanel" aria-labelledby="pills-disabled-tab" tabindex="0">...</div>
+          </div>
+    </div>
+</main>
+{% else %}
     <div class="container mt-5 pt-5">
         <p class="text-danger">You are not logged in</p>
     </div>
-    {% endif %}
+{% endif %}
 
 {% endblock %}
