--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -33,7 +33,7 @@ block content %}
         </div>
         
         
-        <div class="zd pt-5 container px-4 text-light" id="icon-grid">
+        <!-- <div class="zd pt-5 container px-4 text-light" id="icon-grid">
           {% if calendar_events | length > 0 %}
           <h2 class="pb-2 text-center" style="font-weight: 100; color: #EF539E;">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
       
@@ -58,6 +58,72 @@ block content %}
             {% endfor %}
           </div>
 
+          {% else %}
+          <h2 class="pb-2 border-bottom">No appointments today</h2>
+          {% endif %}
+        </div> -->
+
+        <div class="zd pt-5 container px-4 text-light" id="icon-grid">
+          {% if calendar_events | length > 0 %}
+          <h2 class="pb-5 text-center" style="font-weight: 100; color: #EF539E;">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
+          <div id="calendar-controls" class="text-end">
+            <button type="button" class="btn btn-outline-secondary me-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"></path>
+              </svg>
+              <span class="visually-hidden">Previous</span>
+            </button>
+
+            <p class="" style="display: inline; font-size: 1.2rem;">{{ calendar_events[0].vobject_instance.vevent.dtstart.value.strftime("%Y-%m-%d") }}</p>
+            <button type="button" class="btn btn-outline-secondary ms-1">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
+              </svg>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <table class="table table-dark table-hover">
+            <thead class=>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Time</th>
+                <th scope="col"></th>
+                <th scope="col">Details</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for event in calendar_events %}
+              {% set vevent = event.vobject_instance.vevent %}
+              
+              <tr>
+                <th scope="row">{{loop.index}}</th>
+                <td>{{ vevent.dtstart.value.strftime("%H:%M") }} - {{ vevent.dtend.value.strftime("%H:%M") }}</td>
+                <td>
+                  <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="border-radius: 2rem; min-width: 1rem;">
+                    <div class="progress-bar" style="background-color: #EF539E; width: {{ (vevent.dtend.value - vevent.dtstart.value).total_seconds() / 36 }}%; border-radius-left: 2rem;"></div>
+                  </div>
+                </td>
+                <td>
+                  {% if vevent.summary %}
+                    {{ vevent.summary.value }}
+                  {% else %}
+                      No description available
+                  {% endif %}
+                  {% if vevent.location %}
+                    <br>
+                    <small class="text-muted">{{ vevent.location.value }}</small>                
+                  {% endif %}
+                </td>
+                <td>
+                  <button type="button" class="btn btn-outline-secondary">
+                    Πελάτης {{loop.index}}
+                  </button>
+                </td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
           {% else %}
           <h2 class="pb-2 border-bottom">No appointments today</h2>
           {% endif %}
