--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -110,6 +110,14 @@ footer a:hover{
     border-color: var(--calming-blue);
 }
 
+.btn {
+    border-radius: 5rem;
+}
+
+.btn-secondary:hover {
+    color: black;
+}
+
 .login-btn {
     background-color: var(--vibrant-pink);
     border-radius: 5rem;
@@ -266,4 +274,19 @@ em {
 }
 
 
+.modal-footer {
+    border-top: none;
+    background-image: linear-gradient(
+        90deg, 
+        rgba(var(--gradient-color), 0) 0%, 
+        rgba(var(--gradient-color), 0.8) 50%, 
+        rgba(var(--gradient-color), 0) 100%
+    );
+    background-size: 100% 1px;
+    background-repeat: no-repeat;
+}
 
+.modal-content {
+    border-radius: 2rem;
+    padding: 1rem;
+}
