--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -152,15 +152,15 @@
             <!-- Modal -->
             <div class="modal fade" id="updateModal" tabindex="-1" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                  <div class="modal-body" id="modalBodyUpdate">
+                <div class="modal-content bg-dark">
+                  <div class="modal-body text-center" id="modalBodyUpdate">
                     Are you sure you want to update this user?
                   </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                  <div class="modal-footer justify-content-center"">
+                    <button type="button" class="btn btn-secondary px-5" data-bs-dismiss="modal">
                       Cancel
                     </button>
-                    <button type="submit" name="action" value="update" class="btn btn-primary" >
+                    <button type="submit" name="action" value="update" class="btn login-btn px-5" >
                       Update
                     </button>
                   </div>
@@ -200,44 +200,22 @@
               {% endif %} {% endwith %}
             </div>
             <!-- Button trigger modal -->
-            <button
-              type="button"
-              class="btn btn-primary"
-              data-bs-toggle="modal"
-              data-bs-target="#exampleModal2"
-              id="deleteUserButton"
-              disabled
-            >
+            <button type="button" class="btn login-btn px-5" data-bs-toggle="modal" data-bs-target="#exampleModal2" id="deleteUserButton" disabled>
               Delete User
             </button>
 
             <!-- Modal -->
-            <div
-              class="modal fade"
-              id="exampleModal2"
-              tabindex="-1"
-              aria-labelledby="exampleModalLabel"
-              aria-hidden="true"
-            >
+            <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                  <div class="modal-body" id="modalBody">
+                <div class="modal-content bg-dark">
+                  <div class="modal-body text-center" id="modalBody">
                     Are you sure you want to delete this user?
                   </div>
-                  <div class="modal-footer">
-                    <button
-                      type="button"
-                      class="btn btn-secondary"
-                      data-bs-dismiss="modal"
-                    >
+                  <div class="modal-footer justify-content-center">
+                    <button type="button" class="btn btn-secondary px-5" data-bs-dismiss="modal">
                       Cancel
                     </button>
-                    <button
-                      type="submit"
-                      name="action"
-                      value="delete"
-                      class="btn login-btn px-5"
-                    >
+                    <button type="submit" name="action" value="delete" class="btn login-btn px-5">
                       Delete
                     </button>
                   </div>
