--- a/fetusapp/templates/signup.html
+++ b/fetusapp/templates/signup.html
@@ -3,7 +3,7 @@
 
 <main class="flex-shrink-0 m-auto flex-grow-1 bg-dark">
   <div class="container zd text-light py-5" style="text-align: center;">
-    <ul class="nav nav-pills mb-3 justify-content-center bg-light p-2" style="border-radius: 2rem; display: inline-flex; box-shadow: inset 1px 1px 0.2rem #3e1629;" id="pills-tab" role="tablist">
+    <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
         <li class="nav-item"  role="presentation">
           <button class="nav-link {% if active_pill == 'register' %}active{% endif %}" style="border-radius: 5rem;" id="pills-register-tab" data-bs-toggle="pill" data-bs-target="#pills-register" type="button" role="tab" aria-controls="pills-register" aria-selected="true" onclick="switchTab()">Register User</button>
         </li>
