--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -4,7 +4,8 @@
 {% block content %}
 
 {% if current_user.is_authenticated %}
-<main class="flex-shrink-0 m-auto flex-grow-1 bg-dark">
+
+<main class="flex-shrink-0 m-auto flex-grow-1 bg-dark" style="width: 100%;">
 
     <div class="pt-2 container px-4 text-light" id="icon-grid">
         <h2 class="zd py-2 text-center" style="font-weight: 100; color: #EF539E;">Fani Vassileiadou</h2>
@@ -58,7 +59,8 @@
     </div>
 
     <div class="container zd text-light py-5" style="text-align: center;">
-        <ul class="nav nav-pills mb-3 justify-content-center bg-light p-2" style="border-radius: 2rem; display: inline-flex; box-shadow: inset 1px 1px 0.2rem #3e1629;" id="pills-tab" role="tablist">
+        <div class="container secondary-nav-container">
+        <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
             <li class="nav-item"  role="presentation">
               <button class="nav-link active" style="border-radius: 5rem;" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Ιατρικό Ιστορικό</button>
             </li>
@@ -81,6 +83,7 @@
                 <button class="nav-link" style="border-radius: 5rem;" id="pills-disabled-tab" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Ραντεβού</button>
             </li>
         </ul>
+        </div>
           <div class="tab-content p-3" style="text-align: left;" id="pills-tabContent">
             <div class="tab-pane fade show active rounded-4 m-2" style="border-color: #EF539E;" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab" tabindex="0">
                 <ul class="list-unstyled">
