--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="container zd text-light py-5" style="text-align: center;">
-        <div class="container secondary-nav-container">
+        <div class="container" style="display: inline-flex;">
         <ul class="nav nav-pills mb-3 bg-light p-2 secondary-nav-container" id="pills-tab" role="tablist">
             <li class="nav-item"  role="presentation">
               <button class="nav-link active" style="border-radius: 5rem;" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Ιατρικό Ιστορικό</button>
