--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -3,9 +3,9 @@ block content %}
 
     {% if current_user.is_authenticated %}
 
-    <main class="flex-shrink-0 m-auto py-3 flex-grow-1 bg-dark">
+    <main class="flex-shrink-0 m-auto py-3 flex-grow-1 bg-dark" style="width: 100%;">
         
-        <div class="container px-4 pt-3 " id="custom-cards">
+        <div class="container px-4 pt-3 " id="custom-cards" >
      
           <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-4 text-bg-dark mt-1">
       
@@ -32,38 +32,8 @@ block content %}
           </div>
         </div>
         
-        
-        <!-- <div class="zd pt-5 container px-4 text-light" id="icon-grid">
-          {% if calendar_events | length > 0 %}
-          <h2 class="pb-2 text-center" style="font-weight: 100; color: #EF539E;">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
-      
-          <div class="zd row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 pt-4">
-            {% for event in calendar_events %}
-            {% set vevent = event.vobject_instance.vevent %}
-            <div class="col d-flex align-items-start">
-              <div>
-                <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">{{ vevent.summary.value }}</h3>
-                <p>
-                  {% if vevent.description %}
-                    {{ vevent.description.value }}
-                  {% else %}
-                      No description available
-                  {% endif %}
-                </p>
-                <p>
-                  <small class="text-muted">{{ vevent.dtstart.value }}</small>
-                </p>
-              </div>
-            </div>
-            {% endfor %}
-          </div>
 
-          {% else %}
-          <h2 class="pb-2 border-bottom">No appointments today</h2>
-          {% endif %}
-        </div> -->
-
-        <div class="zd pt-5 container px-4 text-light" id="icon-grid">
+        <div class="zd pt-5 container px-4 text-light align-items-stretch" id="icon-grid">
           {% if calendar_events | length > 0 %}
           <h2 class="pb-5 text-center" style="font-weight: 100; color: #EF539E;">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
           <div id="calendar-controls" class="text-end">
@@ -82,48 +52,50 @@ block content %}
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <table class="table table-dark table-hover">
-            <thead class=>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Time</th>
-                <th scope="col"></th>
-                <th scope="col">Details</th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for event in calendar_events %}
-              {% set vevent = event.vobject_instance.vevent %}
-              
-              <tr>
-                <th scope="row">{{loop.index}}</th>
-                <td>{{ vevent.dtstart.value.strftime("%H:%M") }} - {{ vevent.dtend.value.strftime("%H:%M") }}</td>
-                <td>
-                  <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="border-radius: 2rem; min-width: 2rem;">
-                    <div class="progress-bar" style="background-color: #EF539E; width: {{ (vevent.dtend.value - vevent.dtstart.value).total_seconds() / 36 }}%; border-radius-left: 2rem;"></div>
-                  </div>
-                </td>
-                <td>
-                  {% if vevent.summary %}
-                    {{ vevent.summary.value }}
-                  {% else %}
-                      No description available
-                  {% endif %}
-                  {% if vevent.location %}
-                    <br>
-                    <small class="text-muted">{{ vevent.location.value }}</small>                
-                  {% endif %}
-                </td>
-                <td>
-                  <button type="button" class="btn btn-outline-secondary">
-                    Πελάτης {{loop.index}}
-                  </button>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+          <div class="flex-grow-1" style="overflow-x: auto;">
+            <table class="table table-dark table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Time</th>
+                  <th scope="col"></th>
+                  <th scope="col">Details</th>
+                  <th scope="col"></th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for event in calendar_events %}
+                {% set vevent = event.vobject_instance.vevent %}
+                
+                <tr>
+                  <th scope="row">{{loop.index}}</th>
+                  <td>{{ vevent.dtstart.value.strftime("%H:%M") }} - {{ vevent.dtend.value.strftime("%H:%M") }}</td>
+                  <td>
+                    <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="border-radius: 2rem; min-width: 2rem;">
+                      <div class="progress-bar" style="background-color: #EF539E; width: {{ (vevent.dtend.value - vevent.dtstart.value).total_seconds() / 36 }}%; border-radius-left: 2rem;"></div>
+                    </div>
+                  </td>
+                  <td>
+                    {% if vevent.summary %}
+                      {{ vevent.summary.value }}
+                    {% else %}
+                        No description available
+                    {% endif %}
+                    {% if vevent.location %}
+                      <br>
+                      <small class="text-muted">{{ vevent.location.value }}</small>                
+                    {% endif %}
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-outline-secondary">
+                      Πελάτης {{loop.index}}
+                    </button>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
           {% else %}
           <h2 class="pb-2 border-bottom">No appointments today</h2>
           {% endif %}
