--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -45,8 +45,8 @@
                             </h3>
 
                             <!-- New content with slider card -->
-                            <div class="container my-4">
-                                <div class="form-container" id="formContainer">
+                            <div class="container my-4 px-0">
+                                <div class="form-container" style="position: relative; overflow: hidden; transition: max-height 0.2s ease-in-out;" id="formContainer">
 
 
                                     <div class="read-only" id="readOnlyContent">
