added buttons to calendar appointments

--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -8,7 +8,7 @@
 <main class="flex-shrink-0 m-auto flex-grow-1 bg-dark" style="width: 100%;">
 
     <div class="pt-2 container px-4 text-light" id="icon-grid">
-        <h2 class="zd py-2 text-center" style="font-weight: 100; color: #EF539E;">Fani Vassileiadou</h2>
+        <h2 class="zd py-2 text-center" style="font-weight: 100; color: #EF539E;">{{ query_term }}</h2>
     </div>
 
 
@@ -40,14 +40,13 @@
                 <div class="col-12 col-lg-6 text-light">
                     <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="border-color: #EF539E;">
                         <div class="d-flex flex-column h-100 p-4 text-shadow-1">
-                            <h3 class="pb-2">
+                            <h3>
                                 Contact Details
                             </h3>
 
                             <!-- New content with slider card -->
-                            <div class="container px-0">
-                                <div class="form-container" style="position: relative; overflow: hidden; transition: max-height 0.2s ease-in-out;" id="formContainer">
-
+                            <div class="container px-0 ">
+                                <div class="form-container my-4" style="position: relative; transition: max-height 0.2s ease-in-out;" id="formContainer">
 
                                     <div class="read-only" id="readOnlyContent">
                                         <p>
