--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -87,8 +87,13 @@ block content %}
                     {% endif %}
                   </td>
                   <td>
-                    <button type="button" class="btn btn-outline-secondary">
-                      Πελάτης {{loop.index}}
+                    <button type="button" class="btn btn-outline-secondary px-4" onclick="performSearch(`{{ vevent.summary.value }}`)">
+
+                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
+                        <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
+                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                      </svg>
+                      <!-- Πελάτης {{loop.index}} -->
                     </button>
                   </td>
                 </tr>
@@ -141,4 +146,22 @@ block content %}
     {% endif %}
 
 
+{% endblock %}
+
+{% block javascript %}
+<script>
+  function performSearch(searchQuery) {
+    window.location.href = `/patient_search?query=${searchQuery}`;
+      // fetch(`/search?query=${searchQuery}`)
+      //     .then(response => response.json())
+      //     .then(data => {
+      //         if (data.results.length === 1) {
+      //             window.location.href = `/single-result/${data.results[0].id}`;
+      //         } else {
+      //             window.location.href = '/multiple-results';
+      //         }
+      //     })
+      //     .catch(error => console.error('Error:', error));
+  }
+</script>
 {% endblock %}
