hid all the api keys and passwords

--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -25,6 +25,7 @@
                     <tr>
                     <th scope="col">Full Name</th>
                     <th scope="col">Mobile</th>
+                    <th scope="col">UID</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -39,6 +40,17 @@
                             {% elif patient.alternative_phone %}
                             {{ patient.alternative_phone }}
                             {% endif %}
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-outline-secondary px-4" onclick="goToPatient(`{{ patient.id }}`)">
+
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
+                                  <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
+                                  <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                                </svg>
+
+                                {{ patient.id }}
+                            </button>
                         </td>
                     </tr>
                     {% endfor %}
@@ -133,4 +145,9 @@
 {% endblock %}
 
 {% block javascript %}
+<script>
+    function goToPatient(patient_id) {
+      window.location.href = `/patient?id=${patient_id}`;
+    }
+  </script>
 {% endblock %}
